--- a/sucos/templates/modelo/base.html
+++ b/sucos/templates/modelo/base.html
@@ -17,10 +17,10 @@
     <!-- MENU -->
     {% block menu %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">SucoMania</a>
+        <a class="navbar-brand" href="{% url 'inicio' %}">Cia do Suco</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="{% url 'teste' %}">Vendas</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'venda' %}">Vendas</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" >Produção</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Relatórios</a></li>
             </ul>
