--- a/sucos/templates/venda.html
+++ b/sucos/templates/venda.html
@@ -12,9 +12,8 @@
     <!-- CONTEÚDO PRINCIPAL -->
     {% block conteudo %}
     <div class="container my-4 d-flex justify-content-center">
-    <button type="button" class="btn btn-outline-success mx-2">Picole</button>
-    <button type="button" class="btn btn-outline-danger mx-2">Moreninha</button>
-    <a class="btn btn-outline-warning mx-2"  href="{% url 'suco' %}">Suco</a>
+    <a class="btn btn-outline-warning mx-2"  href="{% url 'gelados' %}">Gelados</a>
+    <a class="btn btn-outline-warning mx-2"  href="{% url 'sucos' %}">Suco</a>
 
     </div>
     {% endblock %}
