--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -6,3 +6,12 @@
     color: white;
     padding: 4rem 2rem;
 }
+
+.suco-banner {
+    background-image: url('/static/img/suco.jpeg'); /* coloque sua imagem aqui */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    padding: 4rem 2rem;
+}
