--- a/sucos/templates/modelo/base.html
+++ b/sucos/templates/modelo/base.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -21,12 +23,14 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'venda' %}">Vendas</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" >Produção</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'producao' %}">Produção</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Relatórios</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'ver_carrinho' %}">🛒 Carrinho</a></li> <!-- Carrinho adicionado aqui -->
             </ul>
         </div>
     </nav>
     {% endblock %}
+
 
     <!-- DESTAQUE / BANNER -->
     {% block destaque %}
@@ -55,5 +59,6 @@
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/popper.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
