--- a/sucos/templates/produtos/gelados/gelados.html
+++ b/sucos/templates/produtos/gelados/gelados.html
@@ -1,11 +1,5 @@
-{% extends 'modelo/base.html' %}
+{% extends 'venda.html' %}
 
-    <!-- DESTAQUE / BANNER -->
-    {% block destaque %}
-    <div class="jumbotron text-white text-center mb-0 destaque-banner">
-        <h1 class="display-4">Escolha o Gelado!</h1>
-    </div>
-    {% endblock %}
     
 
 {% block conteudo %}
