--- a/sucos/templates/producao/producao.html
+++ b/sucos/templates/producao/producao.html
@@ -13,7 +13,7 @@
     <!-- CONTEÚDO PRINCIPAL -->
     {% block conteudo %}
     <div class="container my-4 d-flex justify-content-center">
-    <a class="btn btn-outline-warning mx-2"  href="{% url 'producao_suco' %}">Produção De Suco</a>
+    <a class="btn btn-outline-warning mx-2"  href="{% url 'sucos-producao' %}">Produção De Suco</a>
     <a class="btn btn-outline-warning mx-2"  href="{% url 'compra' %}">Compra geral</a>
 
 
